# NanoMatch

./: .gitignore  CMakeLists.txt  NAVIGATION.md  README.md
benchmarks/: bench_match.cpp
data/: generate_orders.py
docs/: REPORT.md  SUBMISSION.md  hardware.md
include/nanomatch/: file_map.hpp  histogram.hpp  itch_parser.hpp  logger.hpp  object_pool.hpp  order_book.hpp  order_book_naive.hpp  spsc_ring.hpp  timing.hpp  types.hpp
scripts/: hardware_info.sh  run_bench.sh  wsl_flamegraph.sh
src/: file_map.cpp  itch_parser.cpp  logger.cpp  main.cpp  order_book.cpp  order_book_naive.cpp
tests/: test_order_book.cpp
